--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -271,7 +271,7 @@
 								<a href="#">销量</a>
 							</li>
 							<li>
-								<a href="#" ng-click="sortSearch('updatTime','DESC')">新品</a>
+								<a href="#" ng-click="sortSearch('updatetime','DESC')">新品</a>
 							</li>
 							<li>
 								<a href="#">评价</a>
